# serializer version: 1
# name: test_forecast_daily
  dict({
    'weather.vilnius': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 13.5,
          'cloud_coverage': 25,
          'condition': 'cloudy',
          'datetime': '2025-09-25T11:00:00+00:00',
          'precipitation': 1.3,
          'precipitation_probability': None,
          'temperature': 15.1,
          'templow': 12.0,
          'wind_bearing': 30,
          'wind_speed': 10.8,
        }),
        dict({
          'apparent_temperature': 12.3,
          'cloud_coverage': 40,
          'condition': 'partlycloudy',
          'datetime': '2025-09-26T00:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 12.5,
          'templow': 7.2,
          'wind_bearing': 75,
          'wind_speed': 10.8,
        }),
        dict({
          'apparent_temperature': 13.8,
          'cloud_coverage': 20,
          'condition': 'sunny',
          'datetime': '2025-09-27T00:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 14.0,
          'templow': 9.0,
          'wind_bearing': 95,
          'wind_speed': 10.8,
        }),
        dict({
          'apparent_temperature': 15.2,
          'cloud_coverage': 8,
          'condition': 'sunny',
          'datetime': '2025-09-28T12:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 15.5,
          'templow': 15.5,
          'wind_bearing': 115,
          'wind_speed': 10.8,
        }),
        dict({
          'apparent_temperature': 15.9,
          'cloud_coverage': 22,
          'condition': 'partlycloudy',
          'datetime': '2025-09-29T12:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 16.2,
          'templow': 16.2,
          'wind_bearing': 135,
          'wind_speed': 10.8,
        }),
      ]),
    }),
  })
# ---
# name: test_forecast_hourly
  dict({
    'weather.vilnius': dict({
      'forecast': list([
        dict({
          'apparent_temperature': 12.2,
          'cloud_coverage': 15,
          'condition': 'partlycloudy',
          'datetime': '2025-09-25T11:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 12.2,
          'wind_bearing': 25,
          'wind_speed': 7.2,
        }),
        dict({
          'apparent_temperature': 13.5,
          'cloud_coverage': 25,
          'condition': 'cloudy',
          'datetime': '2025-09-25T12:00:00+00:00',
          'precipitation': 0.1,
          'precipitation_probability': None,
          'temperature': 13.5,
          'wind_bearing': 30,
          'wind_speed': 10.8,
        }),
        dict({
          'apparent_temperature': 14.0,
          'cloud_coverage': 30,
          'condition': 'cloudy',
          'datetime': '2025-09-25T13:00:00+00:00',
          'precipitation': 0.2,
          'precipitation_probability': None,
          'temperature': 14.2,
          'wind_bearing': 35,
          'wind_speed': 10.8,
        }),
        dict({
          'apparent_temperature': 14.8,
          'cloud_coverage': 35,
          'condition': 'rainy',
          'datetime': '2025-09-25T14:00:00+00:00',
          'precipitation': 0.3,
          'precipitation_probability': None,
          'temperature': 15.1,
          'wind_bearing': 40,
          'wind_speed': 10.8,
        }),
        dict({
          'apparent_temperature': 14.5,
          'cloud_coverage': 40,
          'condition': 'rainy',
          'datetime': '2025-09-25T15:00:00+00:00',
          'precipitation': 0.5,
          'precipitation_probability': None,
          'temperature': 14.8,
          'wind_bearing': 45,
          'wind_speed': 14.4,
        }),
        dict({
          'apparent_temperature': 11.8,
          'cloud_coverage': 50,
          'condition': 'rainy',
          'datetime': '2025-09-25T18:00:00+00:00',
          'precipitation': 0.2,
          'precipitation_probability': None,
          'temperature': 12.0,
          'wind_bearing': 55,
          'wind_speed': 10.8,
        }),
        dict({
          'apparent_temperature': 8.2,
          'cloud_coverage': 60,
          'condition': 'cloudy',
          'datetime': '2025-09-26T00:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 8.5,
          'wind_bearing': 65,
          'wind_speed': 7.2,
        }),
        dict({
          'apparent_temperature': 7.0,
          'cloud_coverage': 55,
          'condition': 'partlycloudy',
          'datetime': '2025-09-26T06:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 7.2,
          'wind_bearing': 70,
          'wind_speed': 7.2,
        }),
        dict({
          'apparent_temperature': 12.3,
          'cloud_coverage': 40,
          'condition': 'partlycloudy',
          'datetime': '2025-09-26T12:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 12.5,
          'wind_bearing': 75,
          'wind_speed': 10.8,
        }),
        dict({
          'apparent_temperature': 11.2,
          'cloud_coverage': 35,
          'condition': 'sunny',
          'datetime': '2025-09-26T18:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 11.5,
          'wind_bearing': 80,
          'wind_speed': 7.2,
        }),
        dict({
          'apparent_temperature': 8.8,
          'cloud_coverage': 30,
          'condition': 'sunny',
          'datetime': '2025-09-27T00:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 9.0,
          'wind_bearing': 85,
          'wind_speed': 7.2,
        }),
        dict({
          'apparent_temperature': 13.8,
          'cloud_coverage': 20,
          'condition': 'sunny',
          'datetime': '2025-09-27T12:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 14.0,
          'wind_bearing': 95,
          'wind_speed': 10.8,
        }),
        dict({
          'apparent_temperature': 12.5,
          'cloud_coverage': 15,
          'condition': 'sunny',
          'datetime': '2025-09-27T18:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 12.8,
          'wind_bearing': 100,
          'wind_speed': 7.2,
        }),
        dict({
          'apparent_temperature': 15.2,
          'cloud_coverage': 8,
          'condition': 'sunny',
          'datetime': '2025-09-28T12:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 15.5,
          'wind_bearing': 115,
          'wind_speed': 10.8,
        }),
        dict({
          'apparent_temperature': 15.9,
          'cloud_coverage': 22,
          'condition': 'partlycloudy',
          'datetime': '2025-09-29T12:00:00+00:00',
          'precipitation': 0.0,
          'precipitation_probability': None,
          'temperature': 16.2,
          'wind_bearing': 135,
          'wind_speed': 10.8,
        }),
      ]),
    }),
  })
# ---
# name: test_weather_entity[weather.vilnius-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'weather',
    'entity_category': None,
    'entity_id': 'weather.vilnius',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'meteo_lt',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WeatherEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'vilnius',
    'unit_of_measurement': None,
  })
# ---
# name: test_weather_entity[weather.vilnius-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'apparent_temperature': 10.9,
      'attribution': 'Data provided by Lithuanian Hydrometeorological Service (LHMT)',
      'cloud_coverage': 1,
      'friendly_name': 'Vilnius',
      'humidity': 71,
      'precipitation_unit': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
      'pressure': 1033.0,
      'pressure_unit': <UnitOfPressure.HPA: 'hPa'>,
      'supported_features': <WeatherEntityFeature: 3>,
      'temperature': 10.9,
      'temperature_unit': <UnitOfTemperature.CELSIUS: '°C'>,
      'visibility_unit': <UnitOfLength.KILOMETERS: 'km'>,
      'wind_bearing': 20,
      'wind_gust_speed': 21.6,
      'wind_speed': 7.2,
      'wind_speed_unit': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'weather.vilnius',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'sunny',
  })
# ---
